=================================================
openadaptor3 production 3.4.4 Release Notes

See licence.txt for Licence information.
=================================================

Date: ???
Author: openadaptor Core Team

openadaptor 3.4.4
=======

Connectors
==========
 * (SC43) setParametersForQuery in JDBCReadConnector gets called for every 
   supplied parameter.

Processors
==========
 * Default ScriptProcessor behaviour has been modified slightly. 
   Previously, all calls to process() method were forcibly synchronised.
   This has now been changed to force synchronisation only if the 
   synchronised property is set to true
   
 * (SC83) GenericEnrichmentProcessor: new 'enrichmentElementName' property allows to
   further customise the way the input and enrichment data are merged together.  
   
 * (SC80) Default values of FIXED and REPROCESSED columns in ExceptionToOrderedMapConvertor
   can now be overwritten via setters, enabling collaboration with databases such
   as Postgres. Contributed by Johannes Nicolai.   
     
 * (SC87, SC88) ScriptConditionProcessor now validates and resets ifProcessor and thenProcessor.
 
Examples
========
 * Added an example that demonstrates use of message metadata
   (example\spring\adaptor\metadata.xml).  

Miscellaneous
=============

 * Support for message metadata. (SC84, SC89)

Bug Fixes
=========

SC81: Exception when stopping Adaptor with AdaptorRunconfiguration via 'kill PID'

=================================================
openadaptor3 production 3.4.3 Release Notes

See licence.txt for Licence information.
=================================================

Date: 28th November 2008
Author: openadaptor Core Team

openadaptor 3.4.3
=======

Connectors
==========

 * New DynamicFileWriteConnector allows writing to files with names dynamically 
   derived from a message payload (SC68). 
   
 * FileWriteConnector - ported rollover functionality (based on file size and file age)  
   from legacy Openadaptor.   