@@ -14,6 +14,10 @@ Connectors
 ==========
  * (SC43) setParametersForQuery in JDBCReadConnector gets called for every 
    supplied parameter.
+   
+ * (SC90) enrolling polling readers (LoopingPollingReadConnector and
+   CronnablePollingReadConnector in a transaction if the delegate reader 
+   is transactional.  
 
 Processors
 ==========
